tests/neg/parser-stability-22.scala
package x0.x0 {}
object x0 {
    def x0 (implicit  // error
// error